--- a/css/style.css
+++ b/css/style.css
@@ -78,86 +78,79 @@ body {
     margin-right: 1.6rem;
     margin-top: 8px; }
 
-.headline-container {
-  margin-top: 4rem; }
-
-.headline-container-photo {
-  width: 100%; }
-  .headline-container-photo--img {
-    width: 100%; }
-
-.headline-top-links {
-  display: flex;
-  font-family: Lora, serif;
-  font-size: 12px;
-  line-height: 20px;
-  font-weight: 700;
-  justify-content: center;
-  text-transform: uppercase;
-  color: #239ad2; }
-  .headline-top-links li:first-child {
-    margin: 0 24px;
-    list-style: none; }
-
-.headline-home-link, .headline-parents-link {
-  color: black; }
-  .headline-home-link:hover, .headline-parents-link:hover {
-    text-decoration: none;
-    color: purple;
-    cursor: default; }
-
-.headline__heading {
-  font-family: Basel, serif;
-  font-weight: 400;
-  line-height: 52px;
-  font-size: 48px;
-  margin: .67rem 0;
-  text-align: center;
-  width: 100%; }
-  @media (max-width: 600px) {
-    .headline__heading {
-      font-size: 36px;
-      line-height: 40px; } }
-
-.headline__social-media {
-  display: flex;
-  justify-content: center;
-  margin: 1rem 0; }
-
-.headline__social-media--icons {
-  height: 1.8rem; }
-
-.headline__social-media-links {
-  width: 2.1rem; }
-
-.container {
+.main-container {
   width: 60%;
+  max-width: 850px;
   margin: 0 auto; }
   @media (max-width: 1200px) {
-    .container {
+    .main-container {
       width: 80%; } }
   @media (max-width: 1024px) {
-    .container {
+    .main-container {
       width: 90%; } }
   @media (max-width: 600px) {
-    .container {
+    .main-container {
       width: 95%; } }
+
+.headline {
+  margin-top: 4rem; }
+  .headline__top-link {
+    display: flex;
+    font-family: Lora, serif;
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 700;
+    justify-content: center;
+    text-transform: uppercase;
+    color: #239ad2; }
+    .headline__top-link li:first-child {
+      margin: 0 24px;
+      list-style: none; }
+    .headline__top-link-text {
+      color: black; }
+      .headline__top-link-text:hover {
+        text-decoration: none;
+        color: purple;
+        cursor: default; }
+  .headline__heading {
+    font-family: Basel, serif;
+    font-weight: 400;
+    line-height: 52px;
+    font-size: 48px;
+    margin: .67rem 0;
+    text-align: center;
+    width: 100%; }
+    @media (max-width: 600px) {
+      .headline__heading {
+        font-size: 36px;
+        line-height: 40px; } }
+  .headline__social-media {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0; }
+    .headline__social-media-img {
+      width: 165px;
+      height: 100%; }
+  .headline__photo {
+    width: 100%; }
+    .headline__photo--img {
+      width: 100%; }
 
 .main-content {
   margin: 0 auto;
   max-width: 650px; }
-  .main-content h2 {
+  .main-content__headline {
     font-family: "Roboto", sans-serif;
     font-size: 18px;
     line-height: 28px;
     font-weight: 700;
     color: rgba(0, 0, 0, 0.95); }
     @media (max-width: 600px) {
-      .main-content h2 {
+      .main-content__headline {
         text-align: center;
         font-size: 18px;
         line-height: 28px; } }
-  .main-content p {
+  .main-content__paragraph {
     font-family: "Lora", serif;
     font-weight: 400;
     font-size: 18px;
@@ -165,15 +158,15 @@ body {
     margin: 20px 0;
     color: rgba(0, 0, 0, 0.95); }
     @media (max-width: 1200px) {
-      .main-content p {
+      .main-content__paragraph {
         font-size: 18px;
         line-height: 28px; } }
     @media (max-width: 1024px) {
-      .main-content p {
+      .main-content__paragraph {
         font-size: 18px;
         line-height: 28px; } }
     @media (max-width: 600px) {
-      .main-content p {
+      .main-content__paragraph {
         font-size: 16px;
         line-height: 28px; } }
 
