--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -20,8 +20,6 @@
     }
 }
 
-
-
 ///////// PAGE HEADLINE AND SOCIAL MEDIA ////////
 .headline {
     margin-top: 4rem;
@@ -39,7 +37,7 @@
             margin: 0 24px;
             list-style: none;
         }
-        &-text {
+        &__text {
             color: black;
             &:hover {
                 text-decoration: none;
@@ -67,7 +65,7 @@
         justify-content: center;
         margin: 1rem 0;
 
-        &-img{
+        &__img{
             width: 165px;
             height: 100%;
         }
@@ -75,7 +73,7 @@
 
     &__photo{
         width: 100%;
-        &--img{
+        &__img{
             width: 100%;
         }
 }
@@ -122,22 +120,21 @@
     }
 }
 
-
-///////////////////  IMAGES CONTAINER ///////////////////
-.figure-container{
+///////////////////  IMAGES  ///////////////////
+.figure{
     max-width: 650px;
     margin: 0 auto;
-    .img-responsive {
+    &__img {
         width: 100%;
     }
-    .img-desc {
+    &__img__desc {
         font-family: "Roboto", sans-serif;
         font-size: 12px;
         line-height: 16px;
         margin: 10px 15px;
         padding: 0;
         color: #A3A5A9;
-        &--author {
+        &__author {
             margin-left: 1.5rem;
         }
     }
