--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -90,11 +90,28 @@
         line-height: 28px;
         font-weight: 700;
         color:rgba(0, 0, 0, 0.95);
+        margin-top: 1rem;
+    }
 
-        @include respond(phone) {
-            text-align: center;
-            font-size: 18px;
-            line-height: 28px;
+    .author{
+        font-family: sans-serif;
+
+        margin: 1.5rem 0;
+        span{
+            margin-right: 2px;
+            font-size: 12px;
+        }
+        &__name{
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 20px;
+            text-transform: uppercase;
+            color: rgba(0, 0, 0, 0.95);
+            text-decoration: none;
+        }
+        &__twitter-icon{
+            margin-left: 5px;
+            width:15px;
         }
     }
 
