--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,24 +19,33 @@ body {
 }
 
 // MEDIA QUERIES MANAGER
-/*
-0 - 600px: Phone
-600 - 1024px: Tablet portrait
-1024 - 1200px: tablet landscape
-*/
-
 @mixin respond ($breakpoint) {
-	@if $breakpoint==phone {
-		@media (max-width: 600px) { 
+    /* Custom, iPhone Retina */ 
+	@if $breakpoint==smallest-phone {
+		@media (max-width: 320px) { 
 			@content; //allows us to pass a block of code to the mixin
 		} 
 	}
-	@if $breakpoint==tab-port {
-		@media (max-width: 1024px) { 
+    /* Extra Small Devices, Phones */ 
+	@if $breakpoint==small-phone {
+		@media (max-width: 480px) { 
 			@content; 
 		} 
 	}
-	@if $breakpoint==tab-land {
+    /* Small Devices, Tablets */
+	@if $breakpoint==phone {
+		@media (max-width: 768px) { 
+			@content; 
+		} 
+	}
+    /* Medium Devices */
+	@if $breakpoint==tab-port {
+		@media (max-width: 992px) { 
+			@content; 
+		} 
+	}
+    /* Large Devices, Wide Screens */
+	@if $breakpoint==desktop {
 		@media (max-width: 1200px) { 
 			@content;
 		} 
