--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -12,8 +12,9 @@
     border-top: 1px solid $color-grey;
     border-bottom: 1px solid $color-grey;
     
+
+    // LEFT CONTAINER
     &__heading{
-    
         font-size: 24px;
         line-height: 32px;
         font-weight: 600;
@@ -32,14 +33,10 @@
             margin: 0 auto;
         }
     }
-    // LEFT CONTAINER
     &__left-container{
-        flex: 0 0 22%;
+        flex: 0 0 300px;
         padding-right: 35px;
 
-        &__figure{
-            
-        }
         &__img{
             width: 290px;
         }
@@ -47,8 +44,8 @@
     }
     // MIDDLE CONTAINER
     &__middle-container{
-        height: 320px;
-        flex: 0 0 22%;
+        height: 350px;
+        flex: 0 0 300px;
         border-right:1px solid rgba(0,0,0,.15);
         border-left: 1px solid rgba(0,0,0,.15);
 
@@ -67,7 +64,7 @@
 
     // RIGHT CONTAINER
     &__right-container{
-        flex: 0 0 22%;
+        flex: 0 0 300px;
 
         &__text{
             font-size: 14px;
@@ -75,7 +72,7 @@
         }
 
         &__social-media{
-            width: 65%;
+            width: 210px;
             margin-top: 1rem;
             margin-bottom: 2.7rem;
 
